Problem description: LO Version: 4.3.0.3 RC3 Build ID: fcd3838c4097f7817b5b3984fd88a44e1edd8548 OS X 10.9.4 Filling cells *with formula* using fill handle works OK ritht, left and downward direction, but DELETES CELL CONTENT if used to fill cells upward. Steps to reproduce: 1. Create new spreadsheet 2. Type any text in a cell and use the fill handle to copy: works OK in all directions (right, left, up and down) 3. Go to another cell and type a formula, e.g., RANDBETWEEN(1;10) 4. Use fill handle to copy the formula down: works OK 5. Use fill handle to copy the formula right: works OK 6. Use fill handle to copy the formula left: works OK 8. Use fill handle to copy the formula up *JUST ONE CELL*: works OK 9. Use fill handle to copy the formula up *two or more cells": NOTHING IS COPIED (cell contents are empty), and the previous content is erased. 10. Step 9 happens weather you select only one or more cells to use with the fill handle. RELATED BEHAVIOUR I have tested steps 9 and 10 with various formulas and the result is the same: cell contents are emptied-erased Steps 9 and 10 are OK if I use automatic filling with a natural number serie: 1,2,3... (I suspect that filling with a serie is not considered *a formula* in this context) Current behavior: The fill handle does not copy *formula* cell content upwards-wise Expected behavior: The formula should have been copied using the fill handle Operating System: Mac OS X Version: 4.3.0.3 rc Last worked in: 4.2.5.2 release
Possibly related with Bug 80761 - Cells hidden with filters get deleted when dragging contents UPWARDS over hidden cells The present bug also happens only in UPWARDS fills
Maybe I misunderstand, can't reproduce step 9 with LO 4.3.0.3 under Ubuntu 12.04 x86. Could you please give step by step procedure to do only step 9? Have you tried resetting user profile? Perharps issue resolved with fresh profile.
(In reply to comment #2) > Maybe I misunderstand, can't reproduce step 9 with LO 4.3.0.3 under Ubuntu > 12.04 x86. > > Could you please give step by step procedure to do only step 9? Hi :-) 1. Click on a cell with a formula, e.g. cell B25 with =RANDBETWEEN(10;50) in it. 2. Click the fill handle (the tiny black square at bottom-right on the selected cell) and drag upward (the same column but in decreasing row order) to select more than one cell (drag to select 5 or 10 cells), e.g., if you have selected cell B25, then left-click the fill handle and drag up to cell B15 4. Release mouse button. Expected result: The formula on cell B25 is copied on all the selected cells (after the click & drag), so range of cells B15:B25 contains the same formula RANDBETWEEN(10;50) Actual result: Content of all the dragged-into cells is deleted-erased (cells B15:B24 are all empty-erased) Hope this clarifies step 9. > > Have you tried resetting user profile? Perharps issue resolved with fresh > profile. I will rename my current profile, try with a fresh new one and report the results here.
Created attachment 103551 [details] Short (59'') mp4 video showing bug 81803
In this video capture we can see the tooltip "Delete contents" appears when dragging the fill handle.
Okay..understood. I just knew that it called 'fill handle'.. ;) Not reproduced in LO 4.2.6.2 - Ubuntu 12.04 x86 Reproduced in LO 4.3.0.3, 4.3.0.2, 4.3.0.1, 4.3.0.0.beta1 Dragging (fill handle) upward can only done 1 cell, and also reproduced with simple substraction formula.
1f32fb58159d7f43a4bcb838765261d5274cbf38 is the first bad commit commit 1f32fb58159d7f43a4bcb838765261d5274cbf38 Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com> Date: Sun May 11 08:22:20 2014 +0000 source-hash-4a169e4203c10ec8f76b9bcb33882c82b65c7bab commit 4a169e4203c10ec8f76b9bcb33882c82b65c7bab Author: Norbert Thiebaud <nthiebaud@gmail.com> AuthorDate: Sat Feb 1 15:01:25 2014 -0600 Commit: Norbert Thiebaud <nthiebaud@gmail.com> CommitDate: Sat Feb 1 15:30:00 2014 -0600 coverity#707742 : Uninitialized scalar field Change-Id: I52bc7ec4326e212a93df3be9b2232bac584d9ee0 :100644 100644 d20de4ff0b9bdd9b763fafa49c1afb8304cbe321 5b474b38f50966351e24f947438fe5c5069517f7 M ccache.log :100644 100644 277e07722fef88bd19e6a2e6b93c82fa258484cc a3fd0980c9745a4955053f7379284d92ac762c9e M commitmsg :100644 100644 67ad5739b25db1bfea220e4b5f3c5c2b04a21d1c 250e6ec1dd90fc56a556820e4224a2172bbaf996 M make.log :040000 040000 f1a9b13c25b15135a071d5d3a6d810adb75be08e 155c2bf3bfc627df46fd3d59458da97e6b0356dc M opt # bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e # good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932 git bisect start 'latest' 'oldest' # good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574 # good: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b git bisect good 4850941efe43ae800be5c76e1102ab80ac2c085d # skip: [a900e72b6357882284c5955bdf939bf14269f5fb] source-hash-dd1050b182260a26a1d0ba6d0ef3a6fecc3f4e07 git bisect skip a900e72b6357882284c5955bdf939bf14269f5fb # skip: [3dda83fc3a43afc6af7f5c0ffd029e610ec1b9a3] source-hash-c59b3d6c5c8096486730007d9b9b053793b90b1e git bisect skip 3dda83fc3a43afc6af7f5c0ffd029e610ec1b9a3 # bad: [4f705a8cfb1998b09f2062510b207d35a33647d8] source-hash-1eeb20f3958666ec6ba6e0fcf52e92e5eb447a14 git bisect bad 4f705a8cfb1998b09f2062510b207d35a33647d8 # bad: [3c72d6d27e2a0c420f74941355400b0834c550bb] source-hash-c30677731c55688c764a669ecea1b1c4d17ae57d git bisect bad 3c72d6d27e2a0c420f74941355400b0834c550bb # good: [92457a48f3715b1233ea025387627280dae681b0] source-hash-c1503da35d8879366da13258837cf0084a536809 git bisect good 92457a48f3715b1233ea025387627280dae681b0 # bad: [206506b5a81e183bfab960d6abe62489c8438daf] source-hash-47811d4cf17688b2db5910e2cd500143137fd6f1 git bisect bad 206506b5a81e183bfab960d6abe62489c8438daf # good: [65883fecdd4e5ccd4091d0089742690dccafdbfa] source-hash-8d8a2f2be58529d70f4783d5d1e91fca350f119f git bisect good 65883fecdd4e5ccd4091d0089742690dccafdbfa # skip: [c9046ea7e069426d10e071d0bcb01c64685844c6] source-hash-f5115e33e4c5e49e9b79ed32fccc193a99c3dc30 git bisect skip c9046ea7e069426d10e071d0bcb01c64685844c6 # good: [e2ef0c10eb06304986b8503584b44f02561ce4b5] source-hash-1b4aadebeb1898686313ff30ef47ddc4336a7444 git bisect good e2ef0c10eb06304986b8503584b44f02561ce4b5 # good: [2d8ee8e5bf8901874460df1b36b3faceae1cb931] source-hash-777e3930a1e85b9bc97c1852b09802fc389c5e2d git bisect good 2d8ee8e5bf8901874460df1b36b3faceae1cb931 # bad: [1f32fb58159d7f43a4bcb838765261d5274cbf38] source-hash-4a169e4203c10ec8f76b9bcb33882c82b65c7bab git bisect bad 1f32fb58159d7f43a4bcb838765261d5274cbf38 # first bad commit: [1f32fb58159d7f43a4bcb838765261d5274cbf38] source-hash-4a169e4203c10ec8f76b9bcb33882c82b65c7bab
Markus Mohrhard committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=896390d79133199910f857cf85004466171ca405 add test case for fdo#81803 The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Markus Mohrhard committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=7bff8e93eb98be4b621c3902de227a3c313cf5b4 the range has to be in the correct order, fdo#81803 The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Markus Mohrhard committed a patch related to this issue. It has been pushed to "libreoffice-4-3": http://cgit.freedesktop.org/libreoffice/core/commit/?id=d6bf71cc649ca2f65eba3c88143573d9ca7f4cc5&h=libreoffice-4-3 the range has to be in the correct order, fdo#81803 It will be available in LibreOffice 4.3.1. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
*** Bug 78982 has been marked as a duplicate of this bug. ***
I can confirm that bug 81803 has been RESOLVED FIXED in my system Version: 4.3.1.0.0+ Build ID: 9b5f1fb41f097741d9fd5cb287de1a62329b9942 TinderBox: MacOSX-x86@49-TDF, Branch:libreoffice-4-3, Time: 2014-08-01_11:45:59 Thank you all for a GREAT WORK with LO :-) Have a nice day :-)
*** Bug 82190 has been marked as a duplicate of this bug. ***
*** Bug 74729 has been marked as a duplicate of this bug. ***
Hi, I confirm this issue is fixed. Now drag up the cell will not delete the content. However, when drap up, a small box still show and says "delete content". This is a small issue, but is misleading. So in my opinion, this bug is partial fixed. Should we file a new bug, or keep track of this one?
Imo file a new bug. Itβs best to keep track of things and stay focused at the problem at hand. Link to the existing bug if relevant info is contained.
Migrating Whiteboard tags to Keywords: (bibisected) [NinjaEdit]
*** Bug 80761 has been marked as a duplicate of this bug. ***