the range has to be in the correct order, fdo#81803

Change-Id: Ia3907701857e22c11a2cefa5d35437c8f8219ff6